--- a/gui/new_gui/booking/booking.qrc
+++ b/gui/new_gui/booking/booking.qrc
@@ -1,7 +1,29 @@
 <RCC>
-  <qresource prefix="icon">
+  <qresource prefix="booking">
     <file>book_time.png</file>
     <file>select_doctor.png</file>
     <file>select_patient.png</file>
+  </qresource>
+  <qresource prefix="choose_patient">
+    <file>choose.png</file>
+    <file>clear_fields.png</file>
+    <file>search.png</file>
+    <file>show_all.png</file>
+  </qresource>
+  <qresource prefix="patient_info">
+    <file>add_photo.png</file>
+    <file>person.png</file>
+    <file>save.png</file>
+  </qresource>
+  <qresource prefix="core">
+    <file>add_doctor.png</file>
+    <file>add_patient.png</file>
+    <file>all_appointment.png</file>
+    <file>all_patient.png</file>
+    <file>book_appointment.png</file>
+    <file>chat.png</file>
+    <file>doctor-team-icon-gray-background-123249074-removebg-preview.png</file>
+    <file>patient_records.png</file>
+    <file>send.png</file>
   </qresource>
 </RCC>
