--- a/gui/new_gui/patient_info.ui
+++ b/gui/new_gui/patient_info.ui
@@ -110,7 +110,7 @@
            <string/>
           </property>
           <property name="pixmap">
-           <pixmap resource="patient_info/rc_one.qrc">:/icon/person.png</pixmap>
+           <pixmap resource="booking/booking.qrc">:/patient_info/person.png</pixmap>
           </property>
           <property name="scaledContents">
            <bool>true</bool>
@@ -135,8 +135,8 @@
            <string>اضافه کردن عکس</string>
           </property>
           <property name="icon">
-           <iconset resource="patient_info/rc_one.qrc">
-            <normaloff>:/icon/add_photo.png</normaloff>:/icon/add_photo.png</iconset>
+           <iconset resource="booking/booking.qrc">
+            <normaloff>:/patient_info/add_photo.png</normaloff>:/patient_info/add_photo.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -168,8 +168,8 @@
            <string>ذخیره</string>
           </property>
           <property name="icon">
-           <iconset resource="patient_info/rc_one.qrc">
-            <normaloff>:/icon/save.png</normaloff>:/icon/save.png</iconset>
+           <iconset resource="booking/booking.qrc">
+            <normaloff>:/patient_info/save.png</normaloff>:/patient_info/save.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -430,7 +430,7 @@
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
-  <include location="patient_info/rc_one.qrc"/>
+  <include location="booking/booking.qrc"/>
  </resources>
  <connections/>
 </ui>
