--- a/gui/new_gui/messaging/message.ui
+++ b/gui/new_gui/messaging/message.ui
@@ -34,7 +34,7 @@
          </font>
         </property>
         <property name="text">
-         <string>پیام های دریافتی</string>
+         <string>پیام های خوانده نشده</string>
         </property>
        </widget>
       </item>
@@ -95,7 +95,7 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>757</width>
+           <width>753</width>
            <height>570</height>
           </rect>
          </property>
