patient and doctor core updated also message server ckecks connection dynamycally

--- a/gui/core_radio.ui
+++ b/gui/core_radio.ui
@@ -140,6 +140,9 @@
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <layout class="QVBoxLayout" name="vertic_4">
+          <property name="spacing">
+           <number>0</number>
+          </property>
           <property name="sizeConstraint">
            <enum>QLayout::SetDefaultConstraint</enum>
           </property>
