all cores work correctly and username password is OK

--- a/gui/new_gui/booking/booking.qrc
+++ b/gui/new_gui/booking/booking.qrc
@@ -16,6 +16,7 @@
     <file>save.png</file>
   </qresource>
   <qresource prefix="core">
+    <file>enter.png</file>
     <file>server.png</file>
     <file>connect_to_server.png</file>
     <file>add_doctor.png</file>
