--- a/gui/new_gui/search_patient/search_patient.ui
+++ b/gui/new_gui/search_patient/search_patient.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string/>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../booking/booking.qrc">
+    <normaloff>:/core/add_doctor.png</normaloff>:/core/add_doctor.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
